--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Pablo Barberá, New York University</title>
+    <title>Hai Liang HKU</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Moore-Sloan Fellow at the NYU Center for Data Science and Assistant Professor in International Relations at the University of Southern California (beginning in July 2016).">
     <meta name="author" content="Pablo Barberá">
