--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Hai Liang HKU</title>
+    <title>Hai Liang The University of Hong Kong</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Moore-Sloan Fellow at the NYU Center for Data Science and Assistant Professor in International Relations at the University of Southern California (beginning in July 2016).">
-    <meta name="author" content="Pablo Barberá">
+    <meta name="description" content="Postdoc at HKU and Assistant Professor at CUHK">
+    <meta name="author" content="Hai Liang">
 	
     <!-- Le styles -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -53,7 +53,7 @@
         <div class="span4">
 			<div class="well">
                 <div class="avatar">
-                    <img src="img/avatar.JPG" />
+                    <img src="img/002.JPG" />
                 </div><!--/avatar -->
                 <br class="clearfix" />
                 
