--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="span4">
 			<div class="well">
                 <div class="avatar">
-                    <img src="img/002.JPG" />
+                    <img src="img/002.jpg" />
                 </div><!--/avatar -->
                 <br class="clearfix" />
                 
