--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container">
-                <a href="http://www.pablobarbera.com/" class="brand" href="#">Pablo Barberá</a>
+                <a href="http://www.drhailiang.com/" class="brand" href="#">Hai Liang</a>
           <ul class="nav navbar-nav">
               <li class="active"><a href="index.html">Home</a></li>
               <li><a href="#research">Research</a></li>
@@ -58,10 +58,10 @@
                 <br class="clearfix" />
                 
                 <div class="bio">
-                    <h1>Pablo Barberá</h1>
-					<p>Moore-Sloan Data Science Fellow </br> New York University</p>
-          <p><a href="mailto:pablo.barbera[at]nyu.edu">pablo.barbera@nyu.edu</a> <i class="icon-envelope"></i></p>
-          <p><a href="http://www.twitter.com/p_barbera/">@p_barbera</a> <i class="fa fa-twitter"></i></p>
+                    <h1>Hai Liang</h1>
+					<p>Postdoc Research Fellow </br> The University of Hong Kong</p>
+          <p><a href="mailto:hailiang[at]hku.hk">hailiang@hku.hk</a> <i class="icon-envelope"></i></p>
+          <p><a href="http://www.twitter.com/drhailiang/">@drhailiang</a> <i class="fa fa-twitter"></i></p>
           <p><a href="http://www.github.com/pablobarbera/">pablobarbera</a> <i class="fa fa-github"></i></p>
           <p><a href="https://scholar.google.com/citations?user=jGLKJUoAAAAJ&hl=en">Google Scholar</a> <i class="fa fa-google"></i></p>
           
