--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="span8">
           <div class="hero-unit">
       
-            <p>I am a Moore-Sloan Fellow at the <a href="http://cds.nyu.edu/">NYU Center for Data Science</a>. In July 2016, I will be joining the faculty of the <a href="http://dornsife.usc.edu/sir/">School of International Relations</a> at the <a href="http://www.usc.edu/">University of Southern California</a> as an Assistant Professor. I received my PhD in Political Science from New York University in 2015, where I was also a graduate research associate in the <a href="http://smapp.nyu.edu">Social Media and Political Participation lab</a>. My primary areas of research include social media and politics, quantitative political methodology, and electoral behavior and political representation. On this website you will find information <a name="research"></a> about myself and my research.</p>
+            <p>Under COnstruction <a href="http://cds.nyu.edu/">NYU Center for Data Science</a>. In July 2016, I will be joining the faculty of the <a href="http://dornsife.usc.edu/sir/">School of International Relations</a> at the <a href="http://www.usc.edu/">University of Southern California</a> as an Assistant Professor. I received my PhD in Political Science from New York University in 2015, where I was also a graduate research associate in the <a href="http://smapp.nyu.edu">Social Media and Political Participation lab</a>. My primary areas of research include social media and politics, quantitative political methodology, and electoral behavior and political representation. On this website you will find information <a name="research"></a> about myself and my research.</p>
 
 		  </div>
 
